--- a/biopages/index.html
+++ b/biopages/index.html
@@ -9,17 +9,24 @@
 </head>
 
 <body>
-
 <nav></nav>
 
 <div id="page">
   
   <div id="top-bio">
-     <div id="hugo">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/a-big.jpg">
+     <div id="hugo" class="cycle-slideshow"
+        data-cycle-fx="scrollHorz"
+        data-cycle-pause-on-hover="true"
+        data-cycle-speed="200">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/c-big.jpg">
+       <!--<img src="https://dl.dropboxusercontent.com/u/335832799/a-big.jpg">
+       <img src="https://dl.dropboxusercontent.com/u/335832799/b-big.jpg">
+       <img src="https://dl.dropboxusercontent.com/u/335832799/e-big.jpg">
+       <img src="https://dl.dropboxusercontent.com/u/335832799/f-big.jpg">
+       <img src="https://dl.dropboxusercontent.com/u/335832799/d-big.jpg">-->
     </div>
     <div class="fourth column">
-      <p class="top-name">Cameron Winchester</p>
+      <p class="top-name">Chris Noessel</p>
       <p class="stats">Design Fellow</p>
       <p class="stats">Designing since 1994</p>
       <p class="stats">Cooperista since 2005</p>
