--- a/biopages/index.html
+++ b/biopages/index.html
@@ -36,6 +36,17 @@
       <p class="main">For marchFIRST Chris was Director of Information Architecture, conducting research and design for notable web sites such as Apple, SEGA, and Harmon Kardon. He was one of the founding graduates of the Interaction Design Institute Ivrea. Chris is a frequent international speaker and educator, evangelizing interaction design around the world. One line that is light and personable.</p>
     </div>
     </div>  
+ 
+   <div id="trivia">
+    <div class="factoid">
+      <img src="img/icon_drama.svg">
+      <p>An ENTJ: you can see why he’s so great at synthesis.</p>
+    </div>
+    <div class="factoid"></div>
+    <div class="factoid"></div>
+    <div class="factoid"></div>
+  </div>
+ 
   
   <div id="cards"></div>
   
