--- a/biopages/index.html
+++ b/biopages/index.html
@@ -14,16 +14,8 @@
 <div id="page">
   
   <div id="top-bio">
-     <div id="hugo" class="cycle-slideshow"
-        data-cycle-fx="scrollHorz"
-        data-cycle-pause-on-hover="true"
-        data-cycle-speed="200">
+     <div id="hugo">
       <img src="https://dl.dropboxusercontent.com/u/335832799/c-big.jpg">
-       <!--<img src="https://dl.dropboxusercontent.com/u/335832799/a-big.jpg">
-       <img src="https://dl.dropboxusercontent.com/u/335832799/b-big.jpg">
-       <img src="https://dl.dropboxusercontent.com/u/335832799/e-big.jpg">
-       <img src="https://dl.dropboxusercontent.com/u/335832799/f-big.jpg">
-       <img src="https://dl.dropboxusercontent.com/u/335832799/d-big.jpg">-->
     </div>
     <div class="fourth column">
       <p class="top-name">Chris Noessel</p>
