--- a/biopages/index.html
+++ b/biopages/index.html
@@ -109,228 +109,158 @@
   
   <div id="cards"></div>
   
-  <div id="cooperistas" class="small">    
-  	<div class="c-thumb">
-    	<a href="cameron.html">
-          <img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
-          <div class="label"><p class="name">Cameron Winchester</p></div>
-        </a>
+  <div id="cooperistas" class="small">
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
+      <div class="label"><p class="name">Cameron Winchester</p></div>
     </div>
     <div class="c-thumb">
-    	<a href="shahrzad.html">
-          <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
-          <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
-        </a>
+      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
     </div>
     <div class="c-thumb">
-    	<a href="index.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
-           <div class="label"><p class="name">Alex Mandel</p></div>
-        </a>
+      <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
+      <div class="label"><p class="name">Alex Mandel</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
+      <div class="label"><p class="name">Julie Celia</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
+      <div class="label"><p class="name">Jason Czismadi</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <div class="label"><p class="name">Cale Leroy</p></div>
     </div>    
     <div class="c-thumb">
-    	<a href="julie.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
-           <div class="label"><p class="name">Julie Celia</p></div>
-        </a>
+      <img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
+      <div class="label"><p class="name">Cameron Winchester</p></div>
     </div>
     <div class="c-thumb">
-    	<a href="jason.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
-           <div class="label"><p class="name">Jason Czismadi</p></div>
-        </a>
-    </div>    
-    <div class="c-thumb">
-      <a href="cale.html">
-      	<img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
-      	<div class="label"><p class="name">Cale Leroy</p></div>
-      </a>
-    </div>   
-    <div class="c-thumb">
-    	<a href="cameron.html">
-          <img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
-          <div class="label"><p class="name">Cameron Winchester</p></div>
-        </a>
-    </div>
-    <a href="shahrzad.html"><div class="c-thumb">
       <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
       <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
     </div>
     <div class="c-thumb selected">
       <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
       <div class="label"><p class="name">Alex Mandel</p></div>
-    </div>    
-    <div class="c-thumb">
-    	<a href="julie.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
-           <div class="label"><p class="name">Julie Celia</p></div>
-        </a>
     </div>
-     <div class="c-thumb"><a href="shahrzad.html">
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
+      <div class="label"><p class="name">Julie Celia</p></div>
+    </div>
+     <div class="c-thumb">
       <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
-      <div class="label"><p class="name">Shahrzad Samadzadeh</p></div></a>
+      <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
     </div>
     <div class="c-thumb">
-    	<a href="index.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
-           <div class="label"><p class="name">Alex Mandel</p></div>
-        </a>
-    </div>    
-    <div class="c-thumb">
-    	<a href="julie.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
-           <div class="label"><p class="name">Julie Celia</p></div>
-        </a>
-    </div>    
-    <div class="c-thumb">
-      <a href="cale.html">
-      	<img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
-      	<div class="label"><p class="name">Cale Leroy</p></div>
-       </a>
+      <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
+      <div class="label"><p class="name">Alex Mandel</p></div>
     </div>
     <div class="c-thumb">
-    	<a href="shahrzad.html">
-          <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
-          <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
-        </a>
+      <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
+      <div class="label"><p class="name">Julie Celia</p></div>
     </div>
     <div class="c-thumb">
-    	<a href="jason.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
-           <div class="label"><p class="name">Jason Czismadi</p></div>
-        </a>
+      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <div class="label"><p class="name">Cale Leroy</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
+      <div class="label"><p class="name">Jason Czismadi</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <div class="label"><p class="name">Cale Leroy</p></div>
+    </div>    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
+      <div class="label"><p class="name">Cameron Winchester</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <div class="label"><p class="name">Cale Leroy</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
+      <div class="label"><p class="name">Alex Mandel</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
+      <div class="label"><p class="name">Julie Celia</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
+      <div class="label"><p class="name">Jason Czismadi</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <div class="label"><p class="name">Cale Leroy</p></div>
     </div>    
     <div class="c-thumb">
-      <a href="cale.html">
-      	<img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
-      	<div class="label"><p class="name">Cale Leroy</p></div>
-      </a>
+      <img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
+      <div class="label"><p class="name">Cameron Winchester</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
+      <div class="label"><p class="name">Jason Czismadi</p></div>
+    </div>
+        <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
+      <div class="label"><p class="name">Alex Mandel</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <div class="label"><p class="name">Cale Leroy</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
+      <div class="label"><p class="name">Alex Mandel</p></div>
+    </div>
+    <div class="c-thumb">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
+      <div class="label"><p class="name">Julie Celia</p></div>
     </div>
     <div class="c-thumb">
       <img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
       <div class="label"><p class="name">Cameron Winchester</p></div>
     </div>
     <div class="c-thumb">
-    	<a href="shahrzad.html">
-          <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
-          <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
-        </a>
-    </div>    
-    <div class="c-thumb">
-      <a href="cale.html">
-      	<img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
-      	<div class="label"><p class="name">Cale Leroy</p></div>
-      </a>
+      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
     </div>
     <div class="c-thumb">
-    	<a href="shahrzad.html">
-          <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
-          <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
-        </a>
+      <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
+      <div class="label"><p class="name">Alex Mandel</p></div>
     </div>
     <div class="c-thumb">
-    	<a href="index.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
-           <div class="label"><p class="name">Alex Mandel</p></div>
-        </a>
-    </div>    
-    <div class="c-thumb">
-    	<a href="julie.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
-           <div class="label"><p class="name">Julie Celia</p></div>
-        </a>
+      <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
+      <div class="label"><p class="name">Jason Czismadi</p></div>
     </div>
     <div class="c-thumb">
-    	<a href="jason.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
-           <div class="label"><p class="name">Jason Czismadi</p></div>
-        </a>
-    </div>    
-    <div class="c-thumb">
-      <a href="cale.html">
-          <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
-          <div class="label"><p class="name">Cale Leroy</p></div>
-      </a>
-    </div>   
-    <div class="c-thumb">
-    	<a href="cameron.html">
-      		<img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
-      		<div class="label"><p class="name">Cameron Winchester</p></div>
-        </a>
+      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <div class="label"><p class="name">Cale Leroy</p></div>
     </div>
-    <div class="c-thumb">
-    	<a href="jason.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
-           <div class="label"><p class="name">Jason Czismadi</p></div>
-        </a>
-    </div>
-    <div class="c-thumb">
-    	<a href="shahrzad.html">
-          <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
-          <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
-        </a>
-    </div>
-    <div class="c-thumb">
-    	<a href="index.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
-           <div class="label"><p class="name">Alex Mandel</p></div>
-        </a>
-    </div>    
-    <div class="c-thumb">
-      <a href="cale.html">
-          <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
-          <div class="label"><p class="name">Cale Leroy</p></div>
-      </a>
-    </div>
-    <div class="c-thumb">
-    	<a href="shahrzad.html">
-          <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
-          <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
-        </a>
-    </div>
-    <div class="c-thumb">
-    	<a href="index.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
-           <div class="label"><p class="name">Alex Mandel</p></div>
-        </a>
-    </div>    
-    <div class="c-thumb">
-    	<a href="julie.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
-           <div class="label"><p class="name">Julie Celia</p></div>
-        </a>
-    </div>
-    <div class="c-thumb">
-    	<a href="cameron.html">
-          <img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
-          <div class="label"><p class="name">Cameron Winchester</p></div>
-          </a>
-    </div>
-    <div class="c-thumb">
-    	<a href="shahrzad.html">
-          <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
-          <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
-        </a>
-    </div>
-    <div class="c-thumb">
-    	<a href="index.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
-           <div class="label"><p class="name">Alex Mandel</p></div>
-        </a>
-    </div>
-    <div class="c-thumb">
-    	<a href="jason.html">
-           <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
-           <div class="label"><p class="name">Jason Czismadi</p></div>
-        </a>
-    </div>
-    <div class="c-thumb">
-      <a href="cale.html">
-          <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
-          <div class="label"><p class="name">Cale Leroy</p></div>
-        </a>
-    </div>
-    
   </div>
   
 </div>
