--- a/biopages/index.html
+++ b/biopages/index.html
@@ -268,5 +268,8 @@
 <div id="spacer"></div>
 <footer></footer>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="http://malsup.github.com/jquery.cycle2.js"></script>
+
 </body>
 </html>
