--- a/biopages/cycle.html
+++ b/biopages/cycle.html
@@ -15,10 +15,11 @@
   
   <div id="top-bio">
      <div id="hugo" class="cycle-slideshow"
-        data-cycle-fx="scrollHorz"
-   		data-cycle-pause-on-hover="true"
-    	data-cycle-speed="200"
+        data-cycle-fx=scrollHorz
+        data-cycle-timeout=0
      >
+      <div class="cycle-prev"></div>
+      <div class="cycle-next"></div>
       <img src="https://dl.dropboxusercontent.com/u/335832799/c-big.jpg">
       <img src="https://dl.dropboxusercontent.com/u/335832799/d-big.jpg">
       <img src="https://dl.dropboxusercontent.com/u/335832799/a-big.jpg">
