--- a/biopages/index.html
+++ b/biopages/index.html
@@ -14,8 +14,17 @@
 <div id="page">
   
   <div id="top-bio">
-     <div id="hugo">
+     <div id="hugo" class="cycle-slideshow"
+        data-cycle-fx=scrollHorz
+        data-cycle-timeout=0 >
+      <div class="cycle-prev"></div>
+      <div class="cycle-next"></div>
       <img src="https://dl.dropboxusercontent.com/u/335832799/c-big.jpg">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/d-big.jpg">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/a-big.jpg">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/e-big.jpg">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/b-big.jpg">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/f-big.jpg">
     </div>
     <div class="fourth column">
       <p class="top-name">Chris Noessel</p>
