adding more cale

--- a/biopages/index.html
+++ b/biopages/index.html
@@ -21,6 +21,7 @@
       <div class="pager cycle-next">></div>
       <img src="https://dl.dropboxusercontent.com/u/335832799/c-big.jpg">
       <img src="https://dl.dropboxusercontent.com/u/335832799/d-big.jpg">
+      <img src="https://dl.dropboxusercontent.com/u/335832799/g-big.jpg">
       <img src="https://dl.dropboxusercontent.com/u/335832799/a-big.jpg">
       <img src="https://dl.dropboxusercontent.com/u/335832799/e-big.jpg">
       <img src="https://dl.dropboxusercontent.com/u/335832799/b-big.jpg">
