Lessen thumbnail height

--- a/biopages/index.html
+++ b/biopages/index.html
@@ -121,154 +121,154 @@
   
   <div id="cooperistas" class="small">
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
       <div class="label"><p class="name">Cameron Winchester</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
       <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
       <div class="label"><p class="name">Alex Mandel</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
       <div class="label"><p class="name">Julie Celia</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
       <div class="label"><p class="name">Jason Czismadi</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
       <div class="label"><p class="name">Cale Leroy</p></div>
     </div>    
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
       <div class="label"><p class="name">Cameron Winchester</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
       <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
     </div>
     <div class="c-thumb selected">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
       <div class="label"><p class="name">Alex Mandel</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
       <div class="label"><p class="name">Julie Celia</p></div>
     </div>
      <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
       <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
       <div class="label"><p class="name">Alex Mandel</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
       <div class="label"><p class="name">Julie Celia</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
       <div class="label"><p class="name">Cale Leroy</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
       <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
       <div class="label"><p class="name">Jason Czismadi</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
       <div class="label"><p class="name">Cale Leroy</p></div>
     </div>    <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
       <div class="label"><p class="name">Cameron Winchester</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
       <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
       <div class="label"><p class="name">Cale Leroy</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
       <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
       <div class="label"><p class="name">Alex Mandel</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
       <div class="label"><p class="name">Julie Celia</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
       <div class="label"><p class="name">Jason Czismadi</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
       <div class="label"><p class="name">Cale Leroy</p></div>
     </div>    
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
       <div class="label"><p class="name">Cameron Winchester</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
       <div class="label"><p class="name">Jason Czismadi</p></div>
     </div>
         <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
       <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
       <div class="label"><p class="name">Alex Mandel</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
       <div class="label"><p class="name">Cale Leroy</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
       <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
       <div class="label"><p class="name">Alex Mandel</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/d.jpg">
       <div class="label"><p class="name">Julie Celia</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/a.jpg">
       <div class="label"><p class="name">Cameron Winchester</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/b.jpg">
       <div class="label"><p class="name">Shahrzad Samadzadeh</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/c.jpg">
       <div class="label"><p class="name">Alex Mandel</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/e.jpg">
       <div class="label"><p class="name">Jason Czismadi</p></div>
     </div>
     <div class="c-thumb">
-      <img src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
+      <img class="p-thumb" src="https://dl.dropboxusercontent.com/u/335832799/f.jpg">
       <div class="label"><p class="name">Cale Leroy</p></div>
     </div>
   </div>
