--- a/biopages/index.html
+++ b/biopages/index.html
@@ -30,9 +30,66 @@
     <div class="fourth column">
       <p class="top-name">Chris Noessel</p>
       <p class="stats">Design Fellow</p>
-      <p class="stats">Designing since 1994</p>
+      <p class="stats">14 years of experience</p>
       <p class="stats">Cooperista since 2005</p>
+ 	<a href="mailto:emma@cooper.com" target="_blank" class="social-icons">
+	  	<svg id="email" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+			viewBox="0 0 36 36" xml:space="preserve">
+	  		<path d="M18,20.1L1.2,7.5c0-1.2,0.9-2.1,2.1-2.1h29.4c1.2,0,2.1,0.9,2.1,2.1L18,20.1z M18,23.9l16.8-12.6v17.2
+				c0,1.2-0.9,2.1-2.1,2.1H3.3c-1.2,0-2.1-0.9-2.1-2.1V11.3L18,23.9z"/></svg></a>      
+	<a href="http://www.linkedin.com" target="_blank" class="social-icons">
+	  	<svg id="linkedin" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+			viewBox="0 0 36 36" xml:space="preserve">
+	  		<path d="M5.3,9.3c-2.5,0-4.1-1.7-4.1-3.8c0-2.2,1.7-3.8,4.2-3.8c2.5,0,4.1,1.7,4.2,3.8C9.6,7.6,8,9.3,5.3,9.3L5.3,9.3z M8.9,12.7
+				v21.7h-7V12.7H8.9z M20.1,21.8c0-2.8,1.8-4.2,3.9-4.2s3.8,1.4,3.8,4.9v11.9h7V21.8c0-6.3-3.5-9.8-8.4-9.8c-2.8,0-4.9,1.6-6.3,3.7
+				l-0.2-3H13c0,0.7,0.1,4.9,0.1,4.9v16.8h7V21.8z"/></svg></a>
+      <a href="http://www.behance.com" target="_blank" class="social-icons">
+	  	<svg id="behance" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+			viewBox="0 0 36 36" xml:space="preserve">
+	  		<path d="M18.4,22c0,3.2-1.8,6.3-7.8,6.3c-4.7,0-9.4,0-9.4,0v-21c0,0,6.3,0,10.1,0c3.8,0,6.4,1.9,6.4,5.4c0,3.1-2,4-2.6,4.3
+				C15.2,17.1,18.4,17.9,18.4,22z M6,15.6h4.5c1.7,0,3.1-0.5,3.1-2.4c0-1.8-1.2-2.2-3.6-2.2H6V15.6z 			
+				M14,21.7c0-1.7-1.1-2.6-3.4-2.6H6v5.6h4.5C13.3,24.7,14,23.4,14,21.7z
+				M34.8,21.7H23.8c0,2.4,1.7,3.7,3.7,3.7c2.3,0,3-1.7,3-1.7h4c-0.7,2.9-3.5,4.9-7.1,4.9
+				c-4.4,0-7.6-2.8-7.6-7.8c0-5.4,3.2-8.1,7.5-8.1c4.8,0,7.5,3,7.5,8.1V21.7z M32,8.1h-9.1v2.1H32V8.1z M30.7,19.1
+				c0-1.8-1.4-3.2-3.4-3.2c-2.1,0-3.2,1.5-3.4,3.2H30.7z"/></svg></a>              
+       <a href="http://www.dribbble.com" target="_blank" class="social-icons">
+<!--      	  	<svg id="dribbble" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+			viewBox="0 0 36 36" xml:space="preserve">
+	  		<path d="M1.2,18c0-0.3,0-0.5,0-0.8c7-0.1,12.8-0.9,17.5-2.4c0.5,1.1,1,2.1,1.5,3.2c-0.4,0.1-0.9,0.2-1.3,0.4
+				C13.7,20.3,9.2,24,5.6,29.4C2.9,26.4,1.2,22.4,1.2,18z M1.6,14.7C2.6,9.4,6.2,5,11,2.8c2.7,3.3,4.8,6.6,6.6,9.8
+				C13.2,13.8,7.9,14.5,1.6,14.7z M18,34.8c-3.9,0-7.6-1.4-10.4-3.6c3.9-6.2,8.7-9.4,13.5-10.7c1.8,4.8,2.8,9.2,3.5,13
+				C22.5,34.3,20.3,34.8,18,34.8z M13.8,1.8c1.4-0.3,2.8-0.5,4.2-0.5c4.3,0,8.2,1.6,11.2,4.3c-2.3,2.6-5.2,4.6-8.9,6.1
+				C18.6,8.4,16.4,5,13.8,1.8z M23,17.4c-0.5-1.2-1-2.3-1.6-3.5c3.9-1.6,7-3.7,9.5-6.5c2.4,2.9,3.8,6.6,3.8,10.5
+				C30.6,17,26.7,16.8,23,17.4z M27.2,32c-0.7-3.6-1.6-7.7-3.3-12.1c3.7-0.5,7.3-0.2,10.6,0.7C33.9,25.3,31.1,29.4,27.2,32z"/></svg></a> -->
+<a href="http://www.twitter.com" target="_blank" class="social-icons">
+	  	<svg id="twitter" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+			viewBox="0 0 300 300" xml:space="preserve">
+			<path d="M264.7,95.3c0,2.5,0,5,0,7.5c0,75.8-57.5,163.3-163.3,163.3c-32.5,0-62.5-7.5-88.3-23.3c4.2,0.8,9.2,0.8,13.3,0.8
+				c26.7,0,51.7-11.7,70.8-27.5c-25,0-46.7-17.5-53.3-40c4.2,0.8,7.5,0.8,11.7,0.8c5,0,10-0.8,15-1.7c-25.8-5-45.8-28.3-45.8-56.7
+				c0,0,0,0,0-0.8c7.5,4.2,16.7,6.7,25.8,7.5c-15.8-10-25.8-27.5-25.8-47.5c0-10.8,3.3-19.2,7.5-27.5c29.2,34.2,70.8,55.8,118.3,58.3
+				c-0.8-4.2-0.8-8.3-0.8-13.3c0-31.7,25.8-57.5,57.5-57.5c16.7,0,31.7,7.5,42.5,18.3c12.5-2.5,25-7.5,35.8-14.2
+				c-4.2,13.3-13.3,25-25,31.7c11.7-1.7,22.5-4.2,33.3-9.2C284.7,77,275.5,87,264.7,95.3z"/></svg></a>
+      <a href="http://www.tumblr.com" target="_blank" class="social-icons">
+<!--      	  	<svg id="tumblr" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+			viewBox="0 0 36 36" xml:space="preserve">
+	  		<path d="M21.2,34.8c-6.3,0-9.1-2.8-9.1-8.4V15.9H7.2V11c4.2-1.4,7-3.5,7.7-9.8h4.9v8.4h7.7v6.3h-7.7v8.4c0,
+			3.5,0.7,4.9,4.2,4.9c2.1,0,4.9-1.4,4.9-1.4V33C28.8,33,26,34.8,21.2,34.8z"/></svg></a>-->
+      <a href="http://www.instagram.com" target="_blank" class="social-icons">
+	  	<svg id="instagram" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+			viewBox="0 0 36 36" xml:space="preserve">
+	  		<path d="M34.8,6.1v23.8c0,2.7-2.2,4.9-4.9,4.9H6.1c-2.7,0-4.9-2.2-4.9-4.9V6.1c0-2.7,2.2-4.9,4.9-4.9h23.8
+				C32.6,1.2,34.8,3.4,34.8,6.1z M31.3,15.9h-3.7c0.1,0.7,0.2,1.4,0.2,2.1c0,5.4-4.4,9.8-9.8,9.8S8.2,23.4,8.2,18
+				c0-0.7,0.1-1.4,0.2-2.1H4.7v14.7c0,0.4,0.3,0.7,0.7,0.7h25.2c0.4,0,0.7-0.3,0.7-0.7V15.9z M11.7,18c0,3.5,2.8,6.3,6.3,6.3
+				s6.3-2.8,6.3-6.3s-2.8-6.3-6.3-6.3S11.7,14.5,11.7,18z M31.3,5.4c0-0.4-0.3-0.7-0.7-0.7h-4.2c-0.4,0-0.7,0.3-0.7,0.7v4.2
+				c0,0.4,0.3,0.7,0.7,0.7h4.2c0.4,0,0.7-0.3,0.7-0.7V5.4z"/></svg></a>                
+<!--      <a href="http://www.facebook.com" target="_blank" class="social-icons">
+	  	<svg id="facebook" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+			viewBox="0 0 36 36" xml:space="preserve">
+	  		<path d="M34.8,32.7c0,1.1-1,2.1-2.1,2.1h-8.4v-13h4.2l0.7-4.8h-4.9v-3.8c0-1.4,0.7-2.2,2.1-2.2h3.1V6.6c0,0-1.4-0.2-3.4-0.2
+				c-4.6,0-6.9,2.6-6.9,6.4v4.2H15v4.8h4.2v13H3.3c-1.1,0-2.1-1-2.1-2.1V3.3c0-1.1,1-2.1,2.1-2.1h29.4c1.1,0,2.1,1,2.1,2.1V32.7z"/></svg></a>        -->     
     </div>
+    
+    
     <div class="threefourths column">
       <h1>Chris is our First Design Fellow here at Cooper. His industry experience ranges from owning a small, museum focused company in Houston, Texas to working with Microsoft’s futures prototyping group in Seattle.</h1>
       <p class="main">For marchFIRST Chris was Director of Information Architecture, conducting research and design for notable web sites such as Apple, SEGA, and Harmon Kardon. He was one of the founding graduates of the Interaction Design Institute Ivrea. Chris is a frequent international speaker and educator, evangelizing interaction design around the world. One line that is light and personable.</p>
