--- a/biopages/index.html
+++ b/biopages/index.html
@@ -52,8 +52,8 @@
 				M34.8,21.7H23.8c0,2.4,1.7,3.7,3.7,3.7c2.3,0,3-1.7,3-1.7h4c-0.7,2.9-3.5,4.9-7.1,4.9
 				c-4.4,0-7.6-2.8-7.6-7.8c0-5.4,3.2-8.1,7.5-8.1c4.8,0,7.5,3,7.5,8.1V21.7z M32,8.1h-9.1v2.1H32V8.1z M30.7,19.1
 				c0-1.8-1.4-3.2-3.4-3.2c-2.1,0-3.2,1.5-3.4,3.2H30.7z"/></svg></a>              
-       <a href="http://www.dribbble.com" target="_blank" class="social-icons">
-<!--      	  	<svg id="dribbble" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+<!--         <a href="http://www.dribbble.com" target="_blank" class="social-icons">
+    	  	<svg id="dribbble" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
 			viewBox="0 0 36 36" xml:space="preserve">
 	  		<path d="M1.2,18c0-0.3,0-0.5,0-0.8c7-0.1,12.8-0.9,17.5-2.4c0.5,1.1,1,2.1,1.5,3.2c-0.4,0.1-0.9,0.2-1.3,0.4
 				C13.7,20.3,9.2,24,5.6,29.4C2.9,26.4,1.2,22.4,1.2,18z M1.6,14.7C2.6,9.4,6.2,5,11,2.8c2.7,3.3,4.8,6.6,6.6,9.8
@@ -69,8 +69,8 @@
 				c0,0,0,0,0-0.8c7.5,4.2,16.7,6.7,25.8,7.5c-15.8-10-25.8-27.5-25.8-47.5c0-10.8,3.3-19.2,7.5-27.5c29.2,34.2,70.8,55.8,118.3,58.3
 				c-0.8-4.2-0.8-8.3-0.8-13.3c0-31.7,25.8-57.5,57.5-57.5c16.7,0,31.7,7.5,42.5,18.3c12.5-2.5,25-7.5,35.8-14.2
 				c-4.2,13.3-13.3,25-25,31.7c11.7-1.7,22.5-4.2,33.3-9.2C284.7,77,275.5,87,264.7,95.3z"/></svg></a>
-      <a href="http://www.tumblr.com" target="_blank" class="social-icons">
-<!--      	  	<svg id="tumblr" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+  <!--     <a href="http://www.tumblr.com" target="_blank" class="social-icons">
+     	  	<svg id="tumblr" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
 			viewBox="0 0 36 36" xml:space="preserve">
 	  		<path d="M21.2,34.8c-6.3,0-9.1-2.8-9.1-8.4V15.9H7.2V11c4.2-1.4,7-3.5,7.7-9.8h4.9v8.4h7.7v6.3h-7.7v8.4c0,
 			3.5,0.7,4.9,4.2,4.9c2.1,0,4.9-1.4,4.9-1.4V33C28.8,33,26,34.8,21.2,34.8z"/></svg></a>-->
