--- a/biopages/index.html
+++ b/biopages/index.html
@@ -74,14 +74,14 @@
 			viewBox="0 0 36 36" xml:space="preserve">
 	  		<path d="M21.2,34.8c-6.3,0-9.1-2.8-9.1-8.4V15.9H7.2V11c4.2-1.4,7-3.5,7.7-9.8h4.9v8.4h7.7v6.3h-7.7v8.4c0,
 			3.5,0.7,4.9,4.2,4.9c2.1,0,4.9-1.4,4.9-1.4V33C28.8,33,26,34.8,21.2,34.8z"/></svg></a>-->
-      <a href="http://www.instagram.com" target="_blank" class="social-icons">
+<!--      <a href="http://www.instagram.com" target="_blank" class="social-icons">
 	  	<svg id="instagram" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
 			viewBox="0 0 36 36" xml:space="preserve">
 	  		<path d="M34.8,6.1v23.8c0,2.7-2.2,4.9-4.9,4.9H6.1c-2.7,0-4.9-2.2-4.9-4.9V6.1c0-2.7,2.2-4.9,4.9-4.9h23.8
 				C32.6,1.2,34.8,3.4,34.8,6.1z M31.3,15.9h-3.7c0.1,0.7,0.2,1.4,0.2,2.1c0,5.4-4.4,9.8-9.8,9.8S8.2,23.4,8.2,18
 				c0-0.7,0.1-1.4,0.2-2.1H4.7v14.7c0,0.4,0.3,0.7,0.7,0.7h25.2c0.4,0,0.7-0.3,0.7-0.7V15.9z M11.7,18c0,3.5,2.8,6.3,6.3,6.3
 				s6.3-2.8,6.3-6.3s-2.8-6.3-6.3-6.3S11.7,14.5,11.7,18z M31.3,5.4c0-0.4-0.3-0.7-0.7-0.7h-4.2c-0.4,0-0.7,0.3-0.7,0.7v4.2
-				c0,0.4,0.3,0.7,0.7,0.7h4.2c0.4,0,0.7-0.3,0.7-0.7V5.4z"/></svg></a>                
+				c0,0.4,0.3,0.7,0.7,0.7h4.2c0.4,0,0.7-0.3,0.7-0.7V5.4z"/></svg></a> -->                
 <!--      <a href="http://www.facebook.com" target="_blank" class="social-icons">
 	  	<svg id="facebook" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
 			viewBox="0 0 36 36" xml:space="preserve">
